--- a/index.html
+++ b/index.html
@@ -128,4 +128,4 @@
 
 
 
-<!-- Hometask bajarildi -->
+<!-- Hometask bajarildi. Assalomu alaykum ustoz bu hometask bajarildi. Asilbek Shakarboyev. -->
